[BACK] Fix sonarqube suggestions